ST-438_archive_old_release_notes-6.9-5.0-move_to_previous_versions+descending_order

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.0.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.0.md
@@ -20,11 +20,11 @@ TAR SHA256: 8df19286b3481f4eb042238636bde733c931ce1b6e51b3f6cd37a8cb525f225b
 TAR MD5: 426005561a1c0ebc0f399dcfdf102b8d
 ```
 
-For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.1](../release_notes_low-level/6.x/6.0.x/6.0.1.md).
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.1](../../../release_notes_low-level/6.x/6.0.x/6.0.1.md).
 
 ### Bug Fixes
 
-- Filesystem access rights prevented proper configuration of [the customer's name in the generated techsupports](../../support/known_issues/IP_Fabric/Customer_name_in_techsupport.md).
+- Filesystem access rights prevented proper configuration of [the customer's name in the generated techsupports](../../../../support/known_issues/IP_Fabric/Customer_name_in_techsupport.md).
 - Discovery -- _discovery_ was hanging on `loadGraphCache` causing infinite discovery
 - Logs -- large logs in `/var/log/nimpee/*` are now not divided into multiple files and are compressed
 - Path Lookup -- IP Fabric GUI crashed when running a certain _E2E Path Lookup_
@@ -58,7 +58,7 @@ TAR SHA256: 3dad74435f66e26260b47f47616b5a680ab4fb71b535d35e437f868964e4d8b7
 TAR MD5: afbe34c8e97bc66c2af111c1ad3715ac
 ```
 
-For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.0](../release_notes_low-level/6.x/6.0.x/6.0.0.md).
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.0](../../../release_notes_low-level/6.x/6.0.x/6.0.0.md).
 
 ### Upgrade Notices
 
@@ -82,7 +82,7 @@ You can now specify the level of access a user has by restricting the ability to
 
 !!! Info
 
-    If you have defined `custom roles` in the 5.0 release, create a new **Attributes scope** policy to allow access to sites users need access to. Also define new **API Endpoints Scope** if needed. See, [Policies](../../IP_Fabric_Settings/administration/policies.md).
+    If you have defined `custom roles` in the 5.0 release, create a new **Attributes scope** policy to allow access to sites users need access to. Also define new **API Endpoints Scope** if needed. See, [Policies](../../../../IP_Fabric_Settings/administration/policies.md).
 
 ### Assurance Engine
 
