--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.2.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.2.md
@@ -19,7 +19,7 @@ SHA256 (ipfabric-update-6-2-2+0.tar.gz.sig) = 464634d28b79565f38d983ec027e2a940a
 MD5(ipfabric-update-6-2-2+0.tar.gz.sig) = ccfc9e25d347a00fc8bf085979380bf0
 ```
 
-For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.2.2](../release_notes_low-level/6.x/6.2.x/6.2.2.md).
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.2.2](../../../release_notes_low-level/6.x/6.2.x/6.2.2.md).
 
 ### Bug Fixes
 
@@ -82,4 +82,4 @@ MD5(ipfabric-update-6_2_1+0.tar.gz.sig) = cfe8cc8f05b4b3f8435612176d5d6e62
         - "https://demo1.eu.ipfabric.io/api/vX.Y/auth/external/azure"
   ```
 
-  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance, please contact your Solution Architect.
+  For more information, please refer to the [SSO documentation](../../../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance, please contact your Solution Architect.
