--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.3.md
@@ -20,7 +20,7 @@ description: In this section, you can find the release notes for v6.3 releases.
         - "https://demo1.eu.ipfabric.io/api/vX.Y/auth/external/azure"
   ```
 
-  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance, please contact your Solution Architect.
+  For more information, please refer to the [SSO documentation](../../../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance, please contact your Solution Architect.
 
 ## v6.3.2 (September 4th, 2023)
 
@@ -37,7 +37,7 @@ SHA256 (ipfabric-6-3-2+1.ova) = 68cf6f3af1ae6ba37247947ce1fbdce8716198fe399903b6
 MD5 (ipfabric-6-3-2+1.ova) = 85a8723cfa734aa58c6d0a9f23349809
 ```
 
-- A fix for SSO has been implemented to ensure that updating the `redirectURIs` in the `/etc/ipf-dex.yaml` configuration file is only required after a major version upgrade (i.e. `6.3.0` --> `7.0.0`). For more information and an example, please see the [SSO Static Clients](../../IP_Fabric_Settings/administration/sso.md#static-clients) documentation.
+- A fix for SSO has been implemented to ensure that updating the `redirectURIs` in the `/etc/ipf-dex.yaml` configuration file is only required after a major version upgrade (i.e. `6.3.0` --> `7.0.0`). For more information and an example, please see the [SSO Static Clients](../../../../IP_Fabric_Settings/administration/sso.md#static-clients) documentation.
 
 ## v6.3.1 (August 16th, 2023)
 
@@ -52,7 +52,7 @@ MD5 (ipfabric-6-3-1+1.ova) = bacc07182c48474b943924283b01e334
 
 ### Versioned API Error Responses
 
-- All version-related HTTP errors have aligned with [documentation](../../IP_Fabric_API/index.md#api-versioning). Improperly set version in request will result in an error response with `410 Gone` HTTP code and current product and API versions in its response body. Before it was returning `404 Not Found`.
+- All version-related HTTP errors have aligned with [documentation](../../../../IP_Fabric_API/index.md#api-versioning). Improperly set version in request will result in an error response with `410 Gone` HTTP code and current product and API versions in its response body. Before it was returning `404 Not Found`.
 
 ### Discovery
 
@@ -113,7 +113,7 @@ SHA256 (ipfabric-6-3-0+4.ova) = 227e0851792dee75559f2e14f948bd7871b83ec7d47527bc
 MD5 (ipfabric-6-3-0+4.ova) = ccac181a8c17a3f82cd14a0cdfa49b6f
 ```
 
-For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.3.0](../release_notes_low-level/6.x/6.3.x/6.3.0.md).
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.3.0](../../../release_notes_low-level/6.x/6.3.x/6.3.0.md).
 
 ### Backward-Incompatible Changes
 
@@ -138,7 +138,7 @@ In most sections with tables, we have switched to the new table layout (which al
 
 The following new tables have been added to IP Fabric. If you are utilizing RBAC
 please verify and update your
-[Policies](../../IP_Fabric_Settings/administration/policies.md) to ensure your
+[Policies](../../../../IP_Fabric_Settings/administration/policies.md) to ensure your
 users can view them as well as using the Path Lookup autocomplete.
 If you need assistance, please contact your Solution Architect.
 
@@ -159,7 +159,7 @@ If you need assistance, please contact your Solution Architect.
 - Cisco
   - Viptela -- added vBond Orchestrator discovery support.
   - Firepower -- added support for Threat Defense NAT policies (NAT44).
-  - Cisco Software-Defined Access (SDA) -- added support for [Locator/ID Separation Protocol](../../IP_Fabric_GUI/technology_tables/lisp.md) (LISP).
+  - Cisco Software-Defined Access (SDA) -- added support for [Locator/ID Separation Protocol](../../../../IP_Fabric_GUI/technology_tables/lisp.md) (LISP).
 - Juniper
   - Junos -- added support for [configuration groups](https://www.juniper.net/documentation/us/en/software/junos/junos-overview/cli/topics/concept/junos-software-configuration-groups-understanding.html) for tasks Zone Firewall, NAT44 and ACL (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - Opengear
