--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.7.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.7.md
@@ -29,7 +29,7 @@ description: In this section, you can find the release notes for v6.7 releases.
   ```
 
   For more information, please refer to the
-  [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
+  [SSO documentation](../../../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance, please contact your Solution Architect.
 
 ## v6.7.7 (March 20th, 2024; GA)
@@ -43,7 +43,7 @@ SHA256 (ipfabric-6-7-7+0.ova) = e90e80628ff1c57916b3951dc7abf99fdb4f70822425a1c6
 MD5 (ipfabric-6-7-7+0.ova) = 6a1c06f404c8a174e045e14104ef727a
 ```
 
-For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.7.0](../release_notes_low-level/6.x/6.7.x/6.7.0.md) and following minor releases.
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.7.0](../../../release_notes_low-level/6.x/6.7.x/6.7.0.md) and following minor releases.
 
 ### Replacement of `nimpee startprod` and `nimpee stopprod` Commands
 
@@ -56,13 +56,13 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 ### Important Product Changes
 
 - Cisco FMC client re-sends `GET` request once when it receives `200 OK` response with empty body.
-- We have started [collecting usage data](../../IP_Fabric_GUI/usage_data_collection.md).
+- We have started [collecting usage data](../../../../IP_Fabric_GUI/usage_data_collection.md).
 
 ### Network Discovery
 
 - Azure -- This release adds support for discovery of multiple subscriptions within the same tenant. The **Subscription IDs** field for `Azure` in **Settings --> Discovery & Snapshots --> Discovery Settings --> Vendors API** is now optional, leave it empty to discover all available subscriptions.
 
-  Required role permissions have been changed, see [Azure Networking -- Role Definitions for IP Fabric](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Azure_Networking.md#role-definitions-for-ip-fabric).
+  Required role permissions have been changed, see [Azure Networking -- Role Definitions for IP Fabric](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Azure_Networking.md#role-definitions-for-ip-fabric).
 
   !!! bug "Multiple Subscriptions"
 
@@ -76,7 +76,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
   - ENCS -- Added support for the basic discovery.
 - Juniper
   - Mist -- We have improved the discovery speed for large networks. Instead of fetching data from Redis cache for each device and task, we now access the data directly from memory. This significantly eliminates the loading time.
-- FS -- Devices banners are now being parsed and stored in our tables. See [Banners](../../IP_Fabric_GUI/technology_tables/management_table.md#banners) for more details.
+- FS -- Devices banners are now being parsed and stored in our tables. See [Banners](../../../../IP_Fabric_GUI/technology_tables/management_table.md#banners) for more details.
 - Silver Peak (HPE Aruba EdgeConnect) -- Added support for new API [9.3 Endpoints](https://developer.arubanetworks.com/aruba-edgeconnect/docs/rest-api-table-for-93).
 
 ### Other Changes
