--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.9.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.9.md
@@ -30,7 +30,7 @@ description: In this section, you can find the release notes for v6.9 releases.
   ```
 
   For more information, please refer to the
-  [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
+  [SSO documentation](../../../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance, please contact your Solution Architect.
 
 ## v6.9.7 (August 8th, 2024; GA)
@@ -53,7 +53,7 @@ MD5 (ipfabric-6-9-7+0.vmdk) = addb7058c0551b4e0308ee6db5eb7c59
 The issue with enable passwords being logged in plaintext in the CLI log while
 discovering Opengear devices with the `Neighbors` task enabled has been fixed.
 For details and remediation, please see
-[NIM-13396: Opengear – Prevent `sudo` Password From Being Logged](../../support/security_bulletins.md#nim-13396-opengear-prevent-sudo-password-from-being-logged)
+[NIM-13396: Opengear – Prevent `sudo` Password From Being Logged](../../../../support/security_bulletins.md#nim-13396-opengear-prevent-sudo-password-from-being-logged)
 in our Security Bulletin.
 
 #### Authentication Tokens
@@ -62,7 +62,7 @@ in our Security Bulletin.
 endpoints (`/auth/login`, `/auth/token`, and `/auth/token/swap`) as a security
 enhancement to protect against XSS attacks. If you use this authentication
 method in your scripts, please update them to use the `Set-Cookie` headers. For
-more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
+more details, see [Token API](../../../../IP_Fabric_API/authentication.md#token-api).
 
 ### Network Discovery
 
@@ -72,10 +72,10 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
 - Stormshield (SN) -- Support for filter (firewall) rules was added.
 - Brocade (FastIron) -- NTP support was added.
 - Fortinet FortiGate -- SD-WAN support was added. For more details, see
-  [Fortinet SD-WAN Known Issues](../../support/known_issues/Vendors/fortinet/sdwan.md).
+  [Fortinet SD-WAN Known Issues](../../../../support/known_issues/Vendors/fortinet/sdwan.md).
 - Citrix NetScaler ADC
   - Discovery has been permanently added to the product, so the
-    [feature flag is no longer needed](../../System_Administration/Command_Line_Interface/Feature_Flags.md#citrix-netscaler-adc-discovery-removed-in-69).
+    [feature flag is no longer needed](../../../../System_Administration/Command_Line_Interface/Feature_Flags.md#citrix-netscaler-adc-discovery-removed-in-69).
   - Data collection for each ADC partition (routing, L3 interfaces, PBR, ARP,
     and virtual servers) was added.
 - Overloaded server detection for HTTP/HTTPS-based Vendor APIs was improved.
@@ -112,10 +112,10 @@ value, please [contact our Support team](https://support.ipfabric.io).
   when it fails on authentication) now has an increased maximum value of 5
   (previously 2). The default value remains 0.
 - New timeout settings have been added:
-   - [**Network device authentication timeout**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#network-device-authentication-timeout)
+   - [**Network device authentication timeout**](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#network-device-authentication-timeout)
     - How many seconds to wait for the login prompt to appear.
     - The default value is 300 seconds.
-   - [**Command response timeout**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#command-response-timeout)
+   - [**Command response timeout**](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#command-response-timeout)
     - How many minutes to wait for a device to finish sending the response to a 
       command.
     - The default value is 180 minutes.
@@ -123,9 +123,9 @@ value, please [contact our Support team](https://support.ipfabric.io).
 #### Device Credentials
 
 In global
-([**Settings --> Discovery & Snapshots --> Discovery Settings --> Device Credentials**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/device_credentials.md#configure-network-infrastructure-access))
+([**Settings --> Discovery & Snapshots --> Discovery Settings --> Device Credentials**](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/device_credentials.md#configure-network-infrastructure-access))
 and per-snapshot
-([**Discovery Snapshot --> (specific snapshot) --> Settings --> Device Credentials**](../../IP_Fabric_GUI/discovery_snapshot.md#snapshot-specific-settings))
+([**Discovery Snapshot --> (specific snapshot) --> Settings --> Device Credentials**](../../../../IP_Fabric_GUI/discovery_snapshot.md#snapshot-specific-settings))
 settings, usernames and passwords now accept only ASCII printable characters.
 Validation has been added to the credentials input.
 
@@ -202,8 +202,8 @@ Architect team, and we will gladly assist you with enabling these features.
 #### VeloCloud
 
 - Basic device info support has been added as a Proof of Concept (PoC) and needs
-  to be [enabled manually via a feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
-- [This section](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/VeloCloud_SD-WAN.md)
+  to be [enabled manually via a feature flag](../../../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
+- [This section](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/VeloCloud_SD-WAN.md)
   provides a detailed description of the VeloCloud setup.
 
 ### Known Issues
