--- a/docs/releases/release_notes/previous_releases/5.0.md
+++ b/docs/releases/release_notes/previous_releases/5.0.md
@@ -2,7 +2,7 @@
 description: In this section, you can find the release notes for v5.0 releases.
 ---
 
-# IP Fabric v5.0
+# IP Fabric v5.x.x
 
 ## v5.0.2 (Sep 13th, 2022)
 
@@ -82,7 +82,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
     contain `api/v5.0` rather than `api/v1`. If you are scripting against the
     API or using it to integrate into other systems, you must change the URL to
     the new format. For more information on this please visit the [API
-    Documentation](../../IP_Fabric_API/index.md) page.
+    Documentation](../../../IP_Fabric_API/index.md) page.
 
     `ipfabric` and `ipfabric-diagrams` Python SDK's have been updated to
     support the new changes. Please visit
@@ -151,7 +151,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
   - `tail -f /var/log/nimpee/dist_upgrade.log`
   - If the `tail` command is not found, wait a few minutes and log out and back in to the CLI.
 - Once upgrade has finished the system will reboot (see below the example output of the `dist_upgrade.log` file).
-- After all updates, please [**Clear Browser Cache**](../index.md).
+- After all updates, please [**Clear Browser Cache**](../../index.md).
 - Not all new features will be available until a new snapshot is created on the updated version.
 - If after the upgrade you experience issues with `AQL: internal error`, Dashboards, or Topology, please first try restarting the `ArangoDB` service from the **System Administration** page prior to contacting support.
   - Log in to the **System Administration** page located on port `8443`.
@@ -208,7 +208,7 @@ osadmin@ipfabric:~$ tail -f /var/log/nimpee/dist_upgrade.log
 
 IP Fabric `5.0.0` includes Phase 1 of RBAC. The most significant change is that Users are now assigned to a Role(s) and not given specific permissions. During the upgrade process your users will be migrated to the appropriate roles. For more information see the documentation at the links below.
 
-- [Policies](../../IP_Fabric_Settings/administration/policies.md)
+- [Policies](../../../IP_Fabric_Settings/administration/policies.md)
   - This is where you define the endpoints users have access to.
   - There are 5 built-in Policies in `5.0.0`
     - `settings`: Access to snapshot and product settings endpoints
@@ -216,10 +216,10 @@ IP Fabric `5.0.0` includes Phase 1 of RBAC. The most significant change is that 
     - `team`: Access to user management endpoints
     - `tables`: Access to table endpoints
     - `others`: Migrated read scope - to be deprecated in 5.1
-- [Roles](../../IP_Fabric_Settings/administration/roles.md)
+- [Roles](../../../IP_Fabric_Settings/administration/roles.md)
   - A Role can consist of one or more policies
   - `admin` role cannot be changed or deleted
-- [Users](../../IP_Fabric_Settings/administration/users.md)
+- [Users](../../../IP_Fabric_Settings/administration/users.md)
   - A User can also consist of one or more roles
 
 ### IP Fabric VM OS-Level Changes
@@ -237,7 +237,7 @@ IP Fabric `5.0.0` includes Phase 1 of RBAC. The most significant change is that 
 
 - All TLS versions older than `1.3` have been deprecated.
   - Some older browsers, proxies, or systems may have issues connecting to IP Fabric after this change.
-  - To re-enable an older version please see [Custom TLS Settings](../../System_Administration/Command_Line_Interface/Custom_TLS.md) or contact your Solution Architect.
+  - To re-enable an older version please see [Custom TLS Settings](../../../System_Administration/Command_Line_Interface/Custom_TLS.md) or contact your Solution Architect.
 - First Boot Wizard Changes
   - For VM initial deployments where console access is not possible, it's now possible to run the First Boot Wizard via SSH
     - Boot the VM, determine the IP address assigned to it from DHCP, and SSH to the VM: `ssh osadmin@<dhcp-learned-ip-address>`
