--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.4.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.4.md
@@ -20,7 +20,7 @@ description: In this section, you can find the release notes for v6.4 releases.
         - "https://demo1.eu.ipfabric.io/api/vX/auth/external/azure"
   ```
 
-  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance, please contact your Solution Architect.
+  For more information, please refer to the [SSO documentation](../../../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance, please contact your Solution Architect.
 
 ## v6.4.3 (GA, October 16th, 2023)
 
@@ -33,11 +33,11 @@ SHA256 (ipfabric-6-4-3+2.ova) = b81d3829de02ee7e79f91a83b16e94b9bd93a619141552d5
 MD5 (ipfabric-6-4-3+2.ova) = a8e6c92f419933e5a248632b51269902
 ```
 
-For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.3](../release_notes_low-level/6.x/6.4.x/6.4.3.md).
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.3](../../../release_notes_low-level/6.x/6.4.x/6.4.3.md).
 
 ## v6.4.2
 
-For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.2](../release_notes_low-level/6.x/6.4.x/6.4.2.md).
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.2](../../../release_notes_low-level/6.x/6.4.x/6.4.2.md).
 
 ### Experimental Features
 
@@ -54,7 +54,7 @@ whitelist some subnets.
 
 ## v6.4.1
 
-For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.1](../release_notes_low-level/6.x/6.4.x/6.4.1.md).
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.1](../../../release_notes_low-level/6.x/6.4.x/6.4.1.md).
 
 ### Bug Fixes
 
@@ -76,7 +76,7 @@ SHA256 (ipfabric-6-4-0+2.ova) = 95a3e8224dbef7749cace5ead1f1eca6a1c199d8f4e25bef
 MD5 (ipfabric-6-4-0+2.ova) = dc05c9c7c76013cfa8e308e9e380915b
 ```
 
-For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.0](../release_notes_low-level/6.x/6.4.x/6.4.0.md).
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.0](../../../release_notes_low-level/6.x/6.4.x/6.4.0.md).
 
 ### GUI
 
@@ -98,7 +98,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
     [feature matrix](https://matrix.ipfabric.io) for more details)
 - AWS
   - **Update the related IAM policy prior to upgrading to `6.4`.** Download the
-    policy JSON file [IAM-policy-IPF_6.4.json](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/aws/IAM-policy-IPF_6.4.json).
+    policy JSON file [IAM-policy-IPF_6.4.json](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/aws/IAM-policy-IPF_6.4.json).
   - Transit Gateway routing significant update -- added support for connect,
     peering and direct-connect-gateway attachments. Improved support for VPC and
     VPN attachments.
@@ -123,6 +123,6 @@ Architect team and we will gladly help you with enabling these features.
 - Cisco
   - ACI -- added basic support for **Service Graphs**
     - Service Graphs inventory added to
-      [SDN](../../IP_Fabric_GUI/technology_tables/SDN.md)
+      [SDN](../../../../IP_Fabric_GUI/technology_tables/SDN.md)
     - supported rules can be found in
-      [Routing policies](../../IP_Fabric_GUI/technology_tables/routing.md/#routing-policies)
+      [Routing policies](../../../../IP_Fabric_GUI/technology_tables/routing.md/#routing-policies)
