--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.6.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.6.md
@@ -38,7 +38,7 @@ MD5 (ipfabric-6-6-3+0.ova) = e52d04cfcde3d68bc768010785762249
   ```
 
   For more information, please refer to the
-  [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
+  [SSO documentation](../../../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance, please contact your Solution Architect.
 
 ### Network Discovery
@@ -52,11 +52,11 @@ MD5 (ipfabric-6-6-3+0.ova) = e52d04cfcde3d68bc768010785762249
     - Discovery of Panorama in management and log collector modes.
 - Cisco
   - FMC -- Added support for Device Groups
-  - All families -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#banners) for more details.
+  - All families -- Devices banners are now being parsed and stored in our tables. See [Banner](../../../../IP_Fabric_GUI/technology_tables/management_table.md#banners) for more details.
 - Arista
-  - EOS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#banners) for more details.
+  - EOS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../../../IP_Fabric_GUI/technology_tables/management_table.md#banners) for more details.
 - Palo Alto
-  - PAN-OS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#banners) for more details.
+  - PAN-OS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../../../IP_Fabric_GUI/technology_tables/management_table.md#banners) for more details.
 
 ### Important Product Changes
 
