removed link from Clear Browser Cache

--- a/docs/releases/release_notes/previous_releases/5.0.md
+++ b/docs/releases/release_notes/previous_releases/5.0.md
@@ -151,7 +151,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
   - `tail -f /var/log/nimpee/dist_upgrade.log`
   - If the `tail` command is not found, wait a few minutes and log out and back in to the CLI.
 - Once upgrade has finished the system will reboot (see below the example output of the `dist_upgrade.log` file).
-- After all updates, please [**Clear Browser Cache**](../../index.md).
+- After all updates, please **Clear Browser Cache**.
 - Not all new features will be available until a new snapshot is created on the updated version.
 - If after the upgrade you experience issues with `AQL: internal error`, Dashboards, or Topology, please first try restarting the `ArangoDB` service from the **System Administration** page prior to contacting support.
   - Log in to the **System Administration** page located on port `8443`.
