Mr 1337 manual cherrypick

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.8.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.8.md
@@ -30,7 +30,7 @@ description: In this section, you can find the release notes for v6.8 releases.
   ```
 
   For more information, please refer to the
-  [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
+  [SSO documentation](../../../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance, please contact your Solution Architect.
 
 ## v6.8.6 (May 28th, 2024; GA)
@@ -68,9 +68,9 @@ MD5 (ipfabric-6-8-4+0.vmdk) = 4da10b0f213a6af0c1c88982115f4dbe
 ### Network Discovery
 
 - Combined API+CLI discovery support for SD-WAN vendors
-  [Versa](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md)
+  [Versa](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md)
   and
-  [Viptela](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md#cisco-viptela-sd-wan)
+  [Viptela](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md#cisco-viptela-sd-wan)
   - If combined discovery is enabled, routing tables are downloaded via CLI to
     avoid large data transfers over the controller, improving discovery time.
   - After completing all API calls, IP Fabric attempts to connect to one of the
@@ -117,7 +117,7 @@ MD5 (ipfabric-6-8-4+0.vmdk) = 4da10b0f213a6af0c1c88982115f4dbe
   settings in **Discovery Snapshot --> Settings --> Device Attributes**. This
   action fully replaces all attributes in the snapshot.
 - You can filter
-  [Disabled Discovery Tasks](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/disabled_discovery_tasks.md)
+  [Disabled Discovery Tasks](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/disabled_discovery_tasks.md)
   by a device's Serial Number. This should help in targeting specific devices.
 - In Table Description, there's a link to a separate page with the API
   documentation. Additionally, we've ensured that the information in our API
@@ -125,9 +125,9 @@ MD5 (ipfabric-6-8-4+0.vmdk) = 4da10b0f213a6af0c1c88982115f4dbe
 - `callhome.ipfabric.io` has changed its IP address from `95.217.156.217` to
   `65.109.166.252`.
   - It is needed for
-    [upgrading IP Fabric over the internet](../../System_Administration/System_Administration_UI/system_update.md#online-update)
+    [upgrading IP Fabric over the internet](../../../../System_Administration/System_Administration_UI/system_update.md#online-update)
     (along with `releases.ipfabric.io`) and
-    [sending diagnostics (parsing errors)](../../support/index.md#callhome) to
+    [sending diagnostics (parsing errors)](../../../../support/index.md#callhome) to
     us.
   - If you intend to use the mentioned functionalities, please allowlist the
     FQDN `callhome.ipfabric.io` instead of the IP address `65.109.166.252`, as
