NIM-17401 update 7.3 release notes with ipv6 input

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -32,6 +32,14 @@ tags: ["draft"]
 
       As of version `7.0`, the Managed Networks and Gateway Redundancy tables have been replaced by the [IPv4 Managed IP Summary table](../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
 
+- IP Input Enhancement:
+  - **Search Functionality**: Users can perform keyword-based searches within the IP list to quickly locate specific entries.
+  - **IP List Management**: Users can efficiently manage IP addresses through enhanced multi-selection capabilities. Multiple IPs can be selected via:
+    - `Shift + Left Click` to select range.
+    - `Click-and-Drag`, similar to text selection in a paragraph. 
+
+      Once selected, IP addresses can be copied or removed from the list.
+
 #### Layout Optimization for Large Circular Graphs
 
 In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs with more than 100 nodes. This functionality
