MR-1355 moved meraki things to main immediatelly

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -95,6 +95,11 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
 - **New Capabilities -- PaloAlto (PAN-OS)**
   - Support for IP and PREDEFINED-IP type objects of `External Dynamic List` has been added.
 
+- **New Device** – **Meraki cloud-managed Catalyst switches**
+  - Now discoverable via the Meraki API  
+  - Identification: Firmware prefix `CS` and Monitoring Version `n/a`  
+  - Discovery can be disabled via [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md).
+
 #### Initial transparent firewall support (behind feature flag)
   Initial support for **transparent firewalls** has been introduced. Since transparent firewalls typically operate at Layer 2 and remain **invisible to other network devices**, manual link configuration is required to incorporate them into the network model.  
 
