NIM-17692, adding Nokia v22+ support

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -186,6 +186,7 @@ For detailed information about the new API endpoints and configuration options, 
 - The bookmark `Detail` for all AWS devices has changed. The differences are:
   - The `Family` column value is now empty (previously was set to `ec2`)
   - The `Version` column value is now empty (previously was set to `2016-11-15`)
+- Added support for Nokia TiMOS version 23 and above
 
 #### Technology Tables
 
