NIM-16987 Add global filter select all to 7.2 rn

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -154,6 +154,7 @@ For detailed information about the new API endpoints and configuration options, 
   - `Last Output Value`
 - An additional column  was added to **the Inventory --> Devices** table and is hidden by default:
   - `Credentials Notes`
+- [Global filter](../../IP_Fabric_GUI/global_filter.md) now allows for selecting all possible values of given attribute using the `Select all` option.
 
 #### Advanced Filters
 
