correction_for_api_endpoints_mentioned_in_rn

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -45,7 +45,7 @@ MD5 (ipfabric-7-2-5+0.vhdx.zst) = eb33e6d0e2a631730d5ffb426633f28e
 
 ### API Endpoints Deprecation
 
-The below API endpoints have been marked as deprecated and the intention is to remove them in the next major version `8.0`.
+The below API endpoints have been marked as deprecated and the intention is to remove them in version `7.5`.
 
 - `/tables/networks/gatewayRedundancy`
 - `/tables/networks/networks`
