--- a/docs/releases/release_notes/7.4.md
+++ b/docs/releases/release_notes/7.4.md
@@ -22,7 +22,9 @@ tags: ["draft"]
 
 - File names of exported graphs were improved. Instead of naming all files `graph`, the file name
   now consists of basic view information (saved view name, site name or path lookup IPs) and a timestamp.
-
+- The attribute filter in the header now displays attributes and values from all loaded snapshots, clearly
+  marking those that are not present in the currently selected snapshot. This change eliminates various glitches
+  when a different snapshot is selected while having the attribute filter active.
 
 #### Network Discovery
 
