added 6.10.md under correct nav.file

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -2,7 +2,7 @@
 description: In this section, you can find the release notes for `v7.3` releases.
 ---
 
-# IP Fabric `v7.3`
+# IP Fabric v7.3
 
 !!! danger "Unreleased Version"
 
@@ -99,10 +99,13 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
   - Identification: Firmware prefix `CS` and Monitoring Version `n/a`  
   - Discovery can be disabled via [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md).
 
-#### Initial transparent firewall support (behind feature flag)
-  Initial support for **transparent firewalls** has been introduced. Since transparent firewalls typically operate at Layer 2 and remain **invisible to other network devices**, manual link configuration is required to incorporate them into the network model.  
+#### Initial Transparent Firewall Support (Behind Feature Flag)
 
-  To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links--transparent-firewall-added-in-73) must be activated. Once enabled, transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
+Initial support for **transparent firewalls** has been introduced. Since transparent firewalls typically operate at Layer 2 and remain **invisible to other network devices**,
+manual link configuration is required to incorporate them into the network model.  
+
+To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links-transparent-firewall) must be activated. Once enabled,
+transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
 
  **Supported Vendors & Technologies**
 
