--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -8,22 +8,25 @@ description: In this section, you can find the release notes for v7.2 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v7.2.5 (March 17th, 2025; EA)
+## v7.2.13 (May 21st, 2025; GA)
+```
+SHA256 (ipfabric-update-7-2-13+0.tar.zst.sig) = 72a601e4cc8ab96357a8c9f548baadec325202f2c5cbde9ca0561ce8dfd5ee72
+MD5 (ipfabric-update-7-2-13+0.tar.zst.sig) = e5b8c418ca26e7c6f2238630a31ad383
+SHA256 (ipfabric-7-2-13+0.qcow2) = 89559066030712f77588fbcb3c11d589dc9e6ae0d57d2093325adbb355ccd5e2
+MD5 (ipfabric-7-2-13+0.qcow2) = 42c37a6c19d94972fcf6348aaf236a84
+SHA256 (ipfabric-7-2-13+0.vmdk) = 2e4f16417876d1ad5b1db83734ae072d69a72e9e7acb2d0004264821ab7381b5
+MD5 (ipfabric-7-2-13+0.vmdk) = 695d4a50ca02966347260c25a2c06b52
+SHA256 (ipfabric-7-2-13+0.vhdx.zst) = c2913e00532c463f6169fccfc9bc61f47f4807706383b64064e1f6b962b3e183
+MD5 (ipfabric-7-2-13+0.vhdx.zst) = e6bf775527ec3fa214788ddb590e83c8
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-2-13+0.ova) = 7d139e0cec5c5ddc334c5e36fdcfe4b00482fcc42c5e7dae3ad59fc6ba89a052
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-2-13+0.ova) = 9c6a5e2f3cd60e25f79f9b10d5d4c0aa
+SHA256 (unsupported-ESXi7.0-ipfabric-7-2-13+0.ova) = 3991d48fd1f32af695ff5bc7037b49d83e75c73d15e08a370dd6919c46b5ff4f
+MD5 (unsupported-ESXi7.0-ipfabric-7-2-13+0.ova) = 098e77c4f2000488459a29a6957691e2
+SHA256 (ESXi8.0-ipfabric-7-2-13+0.ova) = 5d7934b2168f1ce92c7da7bff08aabd37e71ba532635c82c7985d48545a01777
+MD5 (ESXi8.0-ipfabric-7-2-13+0.ova) = 51b3bb7cb54160f4295d4abdc9711aff
+```
 
-```
-SHA256 (ipfabric-update-7-2-5+0.tar.zst.sig) = d109880359565d8fe25a0f9e0f8f961c261a2c6d84b3a907637266c1e7b18f26
-MD5 (ipfabric-update-7-2-5+0.tar.zst.sig) = 2932f484391d11ea3b79bdccfbb6407d
-SHA256 (ipfabric-7-2-5+0.ova) = caf82d11c7ada6c98056c7787d0b249b0347bfa60afcedba361bf56fa1ee855b
-MD5 (ipfabric-7-2-5+0.ova) = 70e5ff7b1befc776d207c907029c93b8
-SHA256 (unsupported-sha1-ipfabric-7-2-5+0.ova) = 5f60e1a5c2325a3b2da9989308b6f600a41c64a3557f26ec108e9b4f32af7660
-MD5 (unsupported-sha1-ipfabric-7-2-5+0.ova) = be4aafed9d63b12eebdbef46d56b7733
-SHA256 (ipfabric-7-2-5+0.qcow2) = 741074a9a5d15fdb8d82ea98ba9f15b19570d34a072766687af5038a869dbd4b
-MD5 (ipfabric-7-2-5+0.qcow2) = 7784fd5faa8e48217690c071e167a2be
-SHA256 (ipfabric-7-2-5+0.vmdk) = 33173b31cb00fc56489284218e7ca03033cf41e9a5011a5bb0ebc02f0e8a9965
-MD5 (ipfabric-7-2-5+0.vmdk) = 5bc4182ddf2545932f70ddd7b463e365
-SHA256 (ipfabric-7-2-5+0.vhdx.zst) = 5606326c1ee96927804957bfc72c09acde89e91233f54265b440d812bc2499a7
-MD5 (ipfabric-7-2-5+0.vhdx.zst) = eb33e6d0e2a631730d5ffb426633f28e
-```
+## v7.2.5 (March 17th, 2025; EA)
 
 ### API Endpoints Deprecation
 
