NIM-18842 Rename snapshot retention page to snapshot collection

--- a/docs/releases/release_notes/7.4.md
+++ b/docs/releases/release_notes/7.4.md
@@ -25,6 +25,7 @@ tags: ["draft"]
 - The attribute filter in the header now displays attributes and values from all loaded snapshots, clearly
   marking those that are not present in the currently selected snapshot. This change eliminates various glitches
   when a different snapshot is selected while having the attribute filter active.
+- The "Snapshot Retention" page has been renamed to "Snapshot Collection," with a corresponding URL update. This change more accurately reflects the content and purpose of the pages.
 
 #### Network Discovery
 
