NIM-19143-adding-alcatel-perVlan-stp-support

--- a/docs/releases/release_notes/7.4.md
+++ b/docs/releases/release_notes/7.4.md
@@ -29,6 +29,10 @@ tags: ["draft"]
 
 #### Network Discovery
 
+#### Vendor Support and Improvements
+
+- **STP per-VLAN (1x1) mode support** -- Added support for **Spanning Tree Protocol in per-VLAN (1x1)** mode on **Alcatel OmniSwitch** devices.
+
 ### Other Changes
 
 - Removed feature flag `ENABLE_ACI_FVTENANT`
