ST-470: Clear cache - example error

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -26,6 +26,12 @@ MD5 (unsupported-ESXi7.0-ipfabric-7-2-13+0.ova) = 098e77c4f2000488459a29a6957691
 SHA256 (ESXi8.0-ipfabric-7-2-13+0.ova) = 5d7934b2168f1ce92c7da7bff08aabd37e71ba532635c82c7985d48545a01777
 MD5 (ESXi8.0-ipfabric-7-2-13+0.ova) = 51b3bb7cb54160f4295d4abdc9711aff
 ```
+### Post-Upgrade Notice
+
+If you encounter a `Something went wrong` error when accessing the IP Fabric GUI after upgrading, clear your browser cache using `CTRL`+`F5` (Windows/Linux) or `Command`+`Shift`+`R` (macOS). This resolves issues caused by outdated cached resources.
+
+  !["Something went wrong." error](7.2/7.2_browser_error.png){.center}
+
 
 ## v7.2.5 (March 17th, 2025; EA)
 
@@ -203,7 +209,7 @@ For detailed information about the new API endpoints and configuration options, 
 
       - In **local settings** of the relevant snapshot(s), toggle **"Compute Intent Verification"** off, save settings, then toggle the rule back on; or
 
-       ![Toggle "Compute Intent Verification"](7.2_toggle_intent_verification.png){ width="600" .center}
+       ![Toggle "Compute Intent Verification"](7.2/7.2_toggle_intent_verification.png){ width="600" .center}
 
       - Manually unload and reload the relevant snapshot(s)
 
