NIM-19574 RN 7.5 Cisco + Fortigate improvements

--- a/docs/releases/release_notes/7.4.md
+++ b/docs/releases/release_notes/7.4.md
@@ -32,6 +32,12 @@ tags: ["draft"]
 #### Vendor Support and Improvements
 
 - **STP per-VLAN (1x1) mode support** -- Added support for **Spanning Tree Protocol in per-VLAN (1x1)** mode on **Alcatel OmniSwitch** devices.
+- Added support for the FortiGate AAA task.
+- Added support for the FortiGate OSPFv3 task.
+- Added support for the Cisco ACI AAA task.
+- Added support for the Cisco ACI SNMP task.
+- Added IPv6 support for the Cisco IOS-XE IS-IS task.
+- Added IPv6 support for the Cisco ASA BGP Neighbors task.  
 
 ### Other Changes
 
