--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -127,16 +127,16 @@ transparent firewalls will appear in the **graph topology**, and **basic path lo
 
 #### Vendor Support and Improvements
 
-- Added IPv6 support for FortiGate zone firewall task.
+- Added IPv6 support for the FortiGate zone firewall task.
 - Added IPv6 support for FortiGate GRE tunnels.
-- Added IPv6 support for Cisco ACI, ASA, IOS, IOS-XE NTP task
-- Added IPv6 support for Cisco IOS, IOS-XE, ASA Syslog task
-- Added IPv6 support for Cisco IOS, IOS-XE, ASA AAA task
-- Added IPv6 support for Cisco IOS, IOS-XE, ASA SNMP task
-- Added IPv6 support for Cisco ASA Neighbor Discovery task
-- Added IPv6 support for Cisco ASA IPv6 routing
-- Added IPv6 support for Cisco ASA IPv6 tunnels
-- Added IPv6 support for Cisco ASA, IOS, IOS-XE IPv6 IPsec
+- Added IPv6 support for the Cisco ACI, ASA, IOS, and IOS-XE NTP task.
+- Added IPv6 support for the Cisco IOS, IOS-XE, and ASA Syslog task.
+- Added IPv6 support for the Cisco IOS, IOS-XE, and ASA AAA task.
+- Added IPv6 support for the Cisco IOS, IOS-XE, and ASA SNMP task.
+- Added IPv6 support for the Cisco ASA Neighbor Discovery task.
+- Added IPv6 support for Cisco ASA IPv6 routing.
+- Added IPv6 support for Cisco ASA IPv6 tunnels.
+- Added IPv6 support for Cisco ASA, IOS, and IOS-XE IPv6 IPsec.
 
 #### Path Lookup
 
