ST-472: ArangoDB troubleshooting

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -30,8 +30,72 @@ MD5 (ESXi8.0-ipfabric-7-2-13+0.ova) = 51b3bb7cb54160f4295d4abdc9711aff
 
 If you encounter a `Something went wrong` error when accessing the IP Fabric GUI after upgrading, clear your browser cache using `CTRL`+`F5` (Windows/Linux) or `Command`+`Shift`+`R` (macOS). This resolves issues caused by outdated cached resources.
 
-  !["Something went wrong." error](7.2/7.2_browser_error.png){.center}
+!["Something went wrong." error](7.2/7.2_browser_error.png){.center}
 
+### Known Issues
+
+#### License or Database Errors After Upgrade
+
+If the IP Fabric GUI redirects to the status page after an upgrade and displays errors such as **License Error**, **ArangoDB Disconnected**, or **Failed to load initial app data**, this may indicate an issue with the ArangoDB configuration.  
+
+!["Failed to load initial app data" error](7.2/7.2_app_data_error.png){.center}  
+
+![License error](7.2/7.2_license_error.png){.center}  
+
+ **To diagnose the issue:**  
+
+1. Log in to the IP Fabric appliance via CLI and switch to the root user using `sudo -i`.  
+
+2. Check if ArangoDB is listening on port `8529` via IPv6 (expected for IP Fabric `7.2`): 
+
+   ```  
+   root@IPF:~# lsof -i | grep 8529 | grep LISTEN  
+   arangod      952    arangodb   26u  IPv6   19501      0t0  TCP *:8529 (LISTEN)  
+   ```  
+
+   If ArangoDB is bound to IPv4 instead, this likely causes the error:  
+
+   ```  
+   root@IPF:~# lsof -i | grep 8529 | grep LISTEN  
+   arangod     874 arangodb   26u  IPv4  20599      0t0  TCP *:8529 (LISTEN)  
+   ```  
+
+3. Verify the `arangod.conf` file in `/etc/arangodb3` is a symbolic link to `arangod.conf.ipf`. The directory should show:  
+
+   ```  
+   root@IPF:~# cd /etc/arangodb3  
+   root@IPF:/etc/arangodb3# ls -lsa | grep arangod.conf  
+   0 lrwxrwxrwx   1 root root    16 Nov 27  2023 arangod.conf -> arangod.conf.ipf  
+   4 -rw-r--r--   1 root root  1687 Feb 11 12:07 arangod.conf.ipf  
+   4 -rw-r--r--   1 root root  1696 Nov 27  2023 arangod.conf.ipf-orig  
+   ```  
+
+**If the symlink is missing (i.e., `arangod.conf` is a regular file):**  
+
+1. Run these commands to restore the symlink:  
+
+   ```  
+   cd /etc/arangodb3/  
+   mv arangod.conf arangod.conf.bkp  
+   ln -s arangod.conf.ipf arangod.conf  
+   systemctl restart arangodb3  
+   ```  
+
+2. Confirm the symlink exists and ArangoDB uses IPv6:  
+
+   ```  
+   root@IPF:/etc/arangodb3# ls -lsa | grep arangod.conf  
+   0 lrwxrwxrwx   1 root root    16 May 27 09:30 arangod.conf -> arangod.conf.ipf  
+   4 -rw-r--r--   1 root root  1697 May 27 09:22 arangod.conf.bkp  
+   4 -rw-r--r--   1 root root  1693 Jan 22  2021 arangod.conf.dpkg-old  
+   4 -rw-r--r--   1 root root  1687 Apr 23 13:42 arangod.conf.ipf  
+   4 -rw-r--r--   1 root root  1696 Mar  4 10:44 arangod.conf.ipf-orig  
+
+   root@IPF:~# lsof -i | grep 8529 | grep LISTEN  
+   arangod    876 arangodb   26u  IPv6  17979      0t0  TCP *:8529 (LISTEN)  
+   ```  
+
+After these steps, the GUI should function correctly.  
 
 ## v7.2.5 (March 17th, 2025; EA)
 
