--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -130,84 +130,9 @@ For more information, see full description in [6.10 release notes](6.10.md).
 
 #### Extensions (Engineering Preview)
 
-In the 7.0 release, we're introducing Extensions, a new feature that allows users to add and customize their IP Fabric instance with a tailored functionality. Extension can
+In the 7.0 release, we're introducing Extensions, a new feature that allows users to add and customize their IP Fabric instance with a tailored functionality.
 
-- Generate custom reports (e.g., DORA)
-- Transform data in real-time (custom tables)
-- Enrich your data through external source integration (CVE information for devices)
-- Implement business-specific processing logic (global search)
-- and much more...
-
-Extensions are managed and access through standard IP Fabric UI under **Extensions** in the main menu.
-
-##### Feature activation
-
-Starting with version 7.0, Extensions can be enabled with `ENABLE_EXTENSIONS=true` [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md) in the global `/etc/default/ipf-appliance-local` file.
-
-##### Flexible deployment options
-
-Extensions supports two streamlined deployment methods:
-
-- **Source Code Deployment**: Submit your source code and `Dockerfile` in a ZIP archive for automated building and deployment
-- **Pre-built Container Deployment**: Upload your pre-built Docker image (container image created with `docker save` command, has to have `.tar` extension) for immediate execution
-
-!!! warning "Docker Default Subnet"
-
-    As of version `7.0.14`, the Docker service, which is used for extensions, is **disabled and stopped by default** to prevent potential subnet conflicts in its default configuration (`172.17.0.0/16`). This subnet may collide with existing network infrastructure.
-
-    **To customize the Docker subnet:**
-
-    1. Edit the configuration in `/etc/docker/daemon.json`, [see](../../support/known_issues/IP_Fabric/unable_to_discover_devices_in_172_17_0_0_16_subnet.md) OR 
-    2. Contact our customer support team via the [support portal](https://support.ipfabric.io)
-
-    **To use Docker with the default subnet** (only if `172.17.0.0/16` is unused in your environment) run: 
-
-    ```bash
-    sudo systemctl enable docker && sudo systemctl start docker
-    ```
-
-##### Technical Specifications
-
-- Extensions run as containers alongside your main application
-- Each extension has to listen on port `80/tcp` for incoming traffic
-- Standard communication flows:
-  - Container → Host: Port 443 (for API requests)
-  - Host → Container: Port 80 (for extension UI)
-- Full external network access support for integration with third-party services
-
-##### Storage Considerations
-
-Please note that Extensions utilize temporary storage in the `/tmp` folder for:
-
-- Uploaded source code archives
-- Docker image files
-
-These artifacts are automatically cleaned up according to your system's temporary storage management policies.
-
-##### Access Control and Permissions
-
-Extensions are governed by a set of atomic permissions that can be assigned through security policies. By default, administrative accounts have full access to all Extensions functionality.
-
-Manageable permissions include:
-
-- Viewing Extensions dashboard
-  - `GET: /extensions`
-- Viewing Extension details
-  - `GET: /extensions/{extensionId}`
-- Registering new Extensions
-  - `POST: /extensions/docker-image`
-  - `POST: /extensions/docker-zip`
-- Starting/Stopping Extensions
-  - `POST: /extensions/{extensionId}/start`
-  - `POST: /extensions/{extensionId}/stop`
-- Un-registering Extensions
-  - `DELETE: /extensions/{extensionId}`
-- View Extension logs
-  - `GET: /extensions/{extensionId}/logs`
-- Download Extension logs
-  - `GET: /extensions/{extensionId}/logs/download`
-
-Each operation requires its specific permission, and unauthorized actions are prevented both at UI level (hidden buttons) and API level (`403 Forbidden responses`).
+The feature is described in details at [Extensions Guide](../../IP_Fabric_GUI/extensions.md)
 
 #### GUI
 
