NIM-19399 update 7.4 release notes with ipv6 config backup

--- a/docs/releases/release_notes/7.4.md
+++ b/docs/releases/release_notes/7.4.md
@@ -39,6 +39,10 @@ tags: ["draft"]
 - Added IPv6 support for the Cisco IOS-XE IS-IS task.
 - Added IPv6 support for the Cisco ASA BGP Neighbors task.  
 
+#### Configuration Management
+
+- Configuration Management now fully supports IPv6-configured devices with all available functionalities.
+
 ### Other Changes
 
 - Removed feature flag `ENABLE_ACI_FVTENANT`
